--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
               try navigating through our website to find what you're looking
               for.
             </p>
-            <a class="w-100 w-md-75 mb-3" href="{{ url('/') }}"> Go to home</a>
+            <a class="w-100 w-md-75 mb-3" href="{{ url('/') }}"> Go to Home</a>
           </div>
         </div>
       </div>
